--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <section>
             <h2>Penutup</h2>
             <p>Demikian proposal kegiatan ini dibuat sebagai acuan dalam pelaksanaan peringatan Hari Kemerdekaan Republik Indonesia di Madrasah DDI. Semoga kegiatan ini dapat berjalan dengan lancar dan memberikan manfaat serta kebahagiaan bagi seluruh warga madrasah.</p>
-            <p class="signature">Tanda Tangan<br>Kepala Madrasah DDI</p>
+            <p class="signature">Usulan Dari<br>anonim anggota sekertaris osis</p>
         </section>
     </main>
     
