--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <p>Peserta: Individu. Peraturan: Peserta harus melompat menggunakan karung dari start hingga finish.</p>
                 </li>
                 <li>
-                    <strong>Badminton (2 orang, putra/putri)</strong>
-                    <p>Peserta: Tim yang terdiri dari 2 orang. Peraturan: Menggunakan aturan standar permainan bulu tangkis.</p>
+                    <strong>takraw(2 orang, putra/putri)</strong>
+                    <p>Peserta: Tim yang terdiri dari 3 orang. Peraturan: Menggunakan aturan standar permainan takraw.</p>
                 </li>
                 <li>
                     <strong>Makan Krupuk (1 orang, putra/putri)</strong>
@@ -57,8 +57,8 @@
                     <p>Peserta: Tim yang terdiri dari 5 orang. Peraturan: Menggunakan aturan standar tarik tambang.</p>
                 </li>
                 <li>
-                    <strong>Pukul Air (1 orang, putra/putri)</strong>
-                    <p>Peserta: Individu. Peraturan: Peserta harus memukul balon berisi air dengan mata tertutup.</p>
+                    <strong>Balap Kardus(1 orang, putra/putri)</strong>
+                    <p>Peserta: Individu. Peraturan: Peserta harus.jongkok menggunakan kardus sampai garis finish.</p>
                 </li>
                 <li>
                     <strong>Stafet Sarung (5 orang, putra/putri)</strong>
